<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolBarTheme"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/explodeJava"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expJava"/>

                <Button
                    android:id="@+id/explodeXML"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expXml"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/slideJava"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slideJava"/>

                <Button
                    android:id="@+id/slideXML"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slideXml"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/fadeJava"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fadeJava"/>

                <Button
                    android:id="@+id/fadeXML"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fadeXml"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/shared_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgStarSharedElement"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/star"
                    android:tint="@android:color/holo_orange_dark"
                    android:transitionName="star"/>

                <TextView
                    android:id="@+id/tvSharedElement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/sharedText"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:transitionName="text_shared"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvRippleWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/ripWBord"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@android:color/black"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/tvRippleWithoutBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/ripWOBord"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:textColor="@android:color/black"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/tvCustomRippleWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/custRipWBord"
                android:background="@drawable/ripple_with_border"
                android:textColor="@android:color/black"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/tvCustomRippleWithoutBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/custRipWOBord"
                android:background="@drawable/ripple_without_border"
                android:textColor="@android:color/black"
                android:textSize="22sp"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />
</LinearLayout>
